--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -62,11 +62,11 @@
         <div class="col-lg-8">
           <div class="panel panel-default">
             <div class="panel-heading">
-              <i class="fa fa-clock-o fa-fw"></i> Graph1
+              <i class="fa fa-clock-o fa-fw"></i> chart1
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
-              <div id="graph-1"></div>
+              <div id="chart-1"></div>
             </div>
             <!-- /.panel-body -->
           </div>
@@ -171,11 +171,11 @@
         <div class="col-lg-8">
           <div class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa fa-clock-o fa-fw"></i> Graph2
+                <i class="fa fa-clock-o fa-fw"></i> chart2
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
-                <div id="graph-2"></div>
+                <div id="chart-2"></div>
             </div>
             <!-- /.panel-body -->
           </div>
@@ -245,15 +245,17 @@
   <!-- Metis Menu Plugin JavaScript -->
   <script src="../resources/lib/bower_components/metisMenu/dist/metisMenu.min.js"></script>
 
-  <script src="../resources/javascript/graph.js"></script>
+  <script src="../resources/javascript/chart.js"></script>
   <script>
     // $(function () {
     //   var currentScreenHeight = $("#page-wrapper > div").height();
     //   $(".side-penel > .panel-body").height(currentScreenHeight - 10);
     // });
   </script>
-  <script src="../resources/lib/highChart/js/highcharts.js"></script>
-  <script src="../resources/lib/highChart/js/modules/exporting.js"></script>
+  
+
+  <script src="../resources/lib/highStock/js/highstock.js"></script>
+  <script src="../resources/lib/highStock/js/modules/exporting.js"></script>
 
   <script type="text/javascript" src="../resources/lib/daterangepicker/moment.js"></script>
   <script type="text/javascript" src="../resources/lib/daterangepicker/daterangepicker.js"></script>
