date range picker 가운데 정렬되도록 조정

--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -79,7 +79,7 @@
             <!-- /.panel-heading -->
             <div class="panel-body side-menu-top-items">
                 <div class="form-group">
-                    <div class="input-prepend input-group side-menu-top-item">
+                    <div class="input-prepend input-group side-menu-top-item daterangepicker-wrapper">
                         <div id="reportrange2" class="btn side-menu-top-item-daterangepicker">
                             <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
                             <span></span> <b class="caret"></b>
