drawChart 메소드를 위한 chart.js Refactoring

--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -196,6 +196,35 @@
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
+                    <div class="side-menu-bottom-item-datepicker">
+                        <select>
+                            <option>2010</option>
+                            <option>2011</option>
+                            <option>2012</option>
+                            <option>2013</option>
+                            <option>2014</option>
+                            <option>2015</option>
+                        </select>
+                        /
+                        <select>
+                            <option>2010</option>
+                            <option>2011</option>
+                            <option>2012</option>
+                            <option>2013</option>
+                            <option>2014</option>
+                            <option>2015</option>
+                        </select>
+                    </div>
+
+                    <div class="btn-group" data-toggle="buttons">
+                    <label class="btn btn-default active">
+                        <input type="radio" data-event-change- name="data-event-change-" value="high" checked>High
+                    </label>
+                    <label class="btn btn-default">
+                        <input type="radio" data-event-change- name="data-event-change-" value="low">Low
+                    </label>
+                </div>
+
                 <div id="chart-2"></div>
             </div>
             <!-- /.panel-body -->
