그래프가 바뀌지 않는 버그 수정

--- a/bootstrap/Views/index.html
+++ b/bootstrap/Views/index.html
@@ -218,10 +218,10 @@
 
                     <div class="btn-group" data-toggle="buttons">
                     <label class="btn btn-default active">
-                        <input type="radio" data-event-change- name="data-event-change-" value="high" checked>High
+                        <input type="radio" data-event-change-compare-temperature name="data-event-change-compare-temperature" value="high" checked>High
                     </label>
                     <label class="btn btn-default">
-                        <input type="radio" data-event-change- name="data-event-change-" value="low">Low
+                        <input type="radio" data-event-change-compare-temperature name="data-event-change-compare-temperature" value="low">Low
                     </label>
                 </div>
 
